--- a/index.html
+++ b/index.html
@@ -5,36 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.cdnfonts.com/css/nes-controller" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/pretendo" rel="stylesheet">           
     <title>Consola</title>
 </head>
 <body>
     <div class="container">
-        <div id="main" class="container">   
-            <div id="controlL" class="Ccontainer">
-                <div id="cruz"></div>
-            </div>
-            <div id="controlM" class="Ccontainer">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <div id="controlR" class="Ccontainer">
-                <div id="nintendo">
-                    Nintendo ®
-                </div>
-                <div id="BR">
-                    <div class="contBR">
-                        <div class="cuadrado"> 
-                            <div class="borde"><div class="circle"></div></div>
-                            <div class="letra">A</div>
-                        </div>
+        <div id="main" class="container">
+            <div id="border">   
+                <div id="controlL" class="Ccontainer">
+                    <div id="cruz">
+                        <div id="horizontal"></div>
+                        <div id="vertical"></div> 
+                        <div id="horizontal2"></div>
                     </div>
-                    <div class="contBR">
-                        <div class="cuadrado"> 
-                            <div class="borde"><div class="circle"></div></div>
-                            <div class="letra">B</div>
+                </div>
+                <div id="controlM" class="Ccontainer">
+                    <div id="raya1" class="fondoraya">
+                        <div id="rayaStart"></div>
+                    </div>
+                    <div id="raya2" class="fondoraya"></div>
+                    <div id="raya3" class="fondoraya">
+                        <div id="start">SELECT</div>
+                        <div id="end">START</div>
+                    </div>
+                    <div id="raya4">
+                        <div id="margenGrueso">
+                            <div id="botonSelect"></div>
+                            <div id="botonStart"></div>
+                        </div>
+                    </div>                   
+                    <div id="raya5" class="fondoraya">
+                        <div id="rayaEnd"></div>
+                    </div>
+                </div>
+                <div id="controlR" class="Ccontainer">
+                    <div id="nintendo">
+                        Nintendo
+                    </div>
+                    <div id="BR">
+                        <div class="contBR">
+                            <div class="cuadrado"> 
+                                <div class="borde"><div class="circle"></div></div>
+                                <div class="letra">B</div>
+                            </div>
+                        </div>
+                        <div class="contBR">
+                            <div class="cuadrado"> 
+                                <div class="borde"><div class="circle"></div></div>
+                                <div class="letra">A</div>
+                            </div>
                         </div>
                     </div>
                 </div>
