--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
                     </div>
                     <div id="raya4">
                         <div id="margenGrueso">
-                            <div id="botonSelect"></div>
-                            <div id="botonStart"></div>
+                            <div id="botonSelect">
+                                <div class="botonBlack"></div>
+                            </div>
+                            <div id="botonStart">
+                                <div class="botonBlack"></div>
+                        </div>
                         </div>
                     </div>                   
                     <div id="raya5" class="fondoraya">
